# sync_dirs

./: LICENSE  README.md  folder_sync.py
TESTdir/original/simple/a/: file1
sync_py/: README  arguments.py  main.py  setup.cfg  sync.py
sync_py/src/: sync.py
sync_py/src/folder_sync_py/: __init__.py  arguments.py  main.py  run.py  sync.py
