[metadata]
name = folder_sync_py 
version = 1.0.0
author = Jan Kotasek
author_email = mizudrakon@gmail.com
description = Creates a folder replica and keeps it synchronized in given intervals
long_description = file: README
long_description_content_type = text
url = https://github.com/mizudrakon/sync_dirs/tree/main/sync_py

keywords = folder synchronization
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    schedule==1.2.1
[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    folder_sync_py = folder_sync_py.main:main